<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PixelPusher Configuration Tool</string>
    <string name="action_settings">WiFi Configuration</string>
    <string name="scan_button_label">Scan</string>
    <string name="title_activity_photon_config">PhotonConfigActivity</string>
    <string name="groupNumberLabel">Group Number</string>
    <string name="pusherNumberLabel">Pusher Number</string>
    <string name="horizontalRule">Horizontal rule</string>
    <string name="rebootButton">Reboot</string>
    <string name="saveButton">Save</string>
    <string name="wifiSSIDLabel">SSID</string>
    <string name="wifiPassLabel">Password</string>
    <string name="welcome_text">Welcome to the Heroic Robotics PixelPusher Photon configuration
        utility.</string>
    <string name="welcome_new_or_existing_prompt">Are you setting up a new Photon or
        reconfiguring one you\'ve already set up?</string>
    <string name="new_photon_button_label">New Photon</string>
    <string name="existing_photon_button_label">Existing Photon</string>

    <string-array name="wifi_protection_choices">
        <item>None</item>
        <item>WEP</item>
        <item>WPA</item>
        <item>WPA2</item>
    </string-array>

    <string name="title_activity_new_photon">Configure a new Photon</string>
    <string name="new_photon_wifi_label">"I need to create a wireless connection to the new Photon. I'm going to attempt to create a WiFi access point with the settings a new Photon expects.\n\nIf you’ve manually set up a wireless connection to the Photon, click skip below."</string>
    <string name="continue_button_label">Continue</string>
    <string name="skip_button_label">Skip</string>
    <string name="title_activity_detect_photon">Choose a PixelPusher to configure</string>
    <string name="title_activity_existing_photon">Configure an existing Photon</string>
    <string name="existing_photon_connection_instructions_label">Please make sure your phone is configured to connect to your existing photon.  If you can\'t get this to work, please factory reset your Photon by pressing and holding the button while you plug it into power.  Then you should follow the new Photon configuration path.</string>
    <string name="scan_result_multiple_photon_label">Please select a Photon below to configure.</string>
    <string name="scan_result_no_photon_label">I have detected no Photons...</string>
    <string name="scan_request_label">Please click scan to look for Photons</string>
    <string name="pref_summary_use_phone_as_ap">If checked, your phone will act as an access point to provide a wireless network for your Photons.  Uncheck if you plan on connecting to a router or access point</string>
    <string name="title_activity_no_settings_stored">NoSettingsStoredActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_settings_stored_label">Because this is the first time you\'ve run the Photon configuration tool, I need to gather information about your wireless network setup.  Click continue below to enter the settings screen.</string>
    <string name="pref_title_continue">Continue with setup</string>
    <string name="continue_with_setup_label">Continue with setup</string>
    <string name="apply_wifi_button_text">Push WiFi config</string>
    <string name="scanning_for_photons_label_text">Scanning for Photons...</string>
    <string name="test_button_label">Test Photon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="join_stored_wifi_message">Do you want your phone to join the wifi network you just pushed to your Photon?</string>
    <string name="join_stored_wifi_title">Join wifi?</string>
    <string name="wifi_send_dialog_title">Sending WiFi Configuration</string>
    <string name="please_wait">Please Wait...</string>
    <string name="rebooting_pusher_title">Rebooting Photon...</string>

</resources>
