<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

   <TextView
        android:text="@string/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignParentEnd="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:id="@+id/welcome_text_label"
       android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:text="@string/welcome_new_or_existing_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="34dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/welcome_text_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_photon_button_label"
        android:id="@+id/new_photon_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="newPhotonButtonClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_photon_button_label"
        android:id="@+id/existing_photon_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="existingPhotonButtonClicked"/>

</RelativeLayout>
